# tessera

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  NOTICE  README.md  install.sh
.claude/: settings.json
.claude/scripts/: mnemos-post-compact-inject.sh  mnemos-post-tool.sh  mnemos-pre-compact.sh  mnemos-pre-edit.sh  mnemos-session-start.sh  mnemos-statusline.sh  mnemos-stop-checkpoint.sh  subagent-route-hook  tessera-findings-surface.sh  tessera-watch-surface.sh  tier-classify-hook
.githooks/: pre-commit
.tessera/: config.yml  project.yml  watch-snooze.json
.tessera/logs/: README.md
_project_specs/: 00-autonomous-engineering-roadmap.md  01-runtime-observability.md  02-rollback-and-recovery.md  03-verifiable-contracts.md  04-multi-agent-coordination.md  05-confidence-calibration.md  06-cost-budget-awareness.md  07-human-escalation-protocol.md  08-auto-code-index.md  09-multimodal-ingestion.md  10-token-budget.md  11-fail-open-detection.md  12-adversarial-verification.md  13-friction-detector-upgrade.md  14-should-fire-followons.md  15-gate-kind-vocabulary.md  16-live-correction-pipe-check.md
_project_specs/phases/: phase-01-pi-adapter.md  phase-02-model-routing.md  phase-03-mnemos-multimodel.md  phase-05-maggy-v2-ui.md  (+10 more)
agents/: explore.md
commands/: analyze-repo.md  analyze-workspace.md  build-in-public.md  evaluate-framework.md  icpg-bootstrap.md  icpg-drift.md  icpg-impact.md  icpg-intent.md  icpg-why.md  initialize-project.md  maggy-init.md  maggy.md  mnemos-checkpoint.md  mnemos-status.md  model-config.md  polyphony-init.md  polyphony-spawn.md  polyphony-status.md  set-tracker.md  spawn-team.md  sync-agents.md  sync-contracts.md  update-code-index.md  usage-summary.md
cortex-mcp/: .coverage  pyproject.toml
cortex-mcp/docs/: cortex-vs-codebase-memory.md
cortex-mcp/src/cortex/: __init__.py  __main__.py  config.py  server.py
cortex-mcp/src/cortex/storage/: db.py  graph.py  schema.py
cortex-mcp/src/cortex/structure/: complexity.py  edge_extractor.py  fallback_parser.py  git_edges.py  indexer.py  models.py  python_edges.py  snippets.py  ts_edges.py
cortex-mcp/src/cortex/tools/: intent_impl.py  intent_tools.py  memory_impl.py  memory_tools.py  structure_tools.py  unified_tools.py
cortex-mcp/tests/: conftest.py
cortex-mcp/tests/test_benchmark/: test_parity.py
cortex-mcp/tests/test_storage/: test_db.py  test_graph.py
cortex-mcp/tests/test_structure/: test_edge_extractor.py  test_fallback_parser.py  test_indexer.py
cortex-mcp/tests/test_tools/: test_cross_layer.py  test_intent_memory.py
docs/: architecture-v5.md  benchmark-results.md  claude-bootstrap-reference.md  design-principles.md  install.md  maggy-rfc.md  mnemos-implementation.md  mwp.md  observatory.md  polyphony-spec.md  postmortem-2026-07-12.md  tessera-design-principles.md
evals/: README.md  run-evals.sh
hooks/: auto-review-hook  icpg-inject-context  icpg-record-intent  mid-task-escalation  mnemos-session-start.sh  plugin-trigger  polyphony-auto-isolate  post-commit-graph  pre-push  route-task-hook  subagent-route-hook  tier-classify-hook  usage-summary-hook
rules/: adr-enforcement.md  nodejs-backend.md  python.md  quality-gates.md  react.md  security.md  tdd-workflow.md  typescript.md
scripts/: convert-hooks-to-toml.sh  convert-skills-structure.sh  detect-agents.sh  doccheck.py  install-graph-tools.sh  install-hooks.sh  install-skills.sh  install_session_hooks.py  model_routing.py  onboard.sh  run-tests.sh  setup-vercel-isolation.sh  skill_overrides.py  tessera_config.py  test_council.py  test_doccheck.py  test_handoff_surface.py  test_new_project_gate_copies.py  test_skill_overrides.py  test_sync_skills.py  test_tessera_changelog.py  test_tessera_config.py  test_tessera_escalate.py  test_tessera_findings.py  test_tessera_verify.py  test_tessera_watch.py
scripts/icpg/: __init__.py  __main__.py  bootstrap.py  contracts.py  drift.py  models.py  pyproject.toml  store.py  symbols.py  vectors.py
scripts/mnemos/: __init__.py  __main__.py  auto_nodes.py  checkpoint.py  claude_log.py  consolidation.py  correction_detect.py  divergence.py  eval_correction.py  fatigue.py  haziness.py  models.py  pyproject.toml  redact.py  signals.py  store.py  test_bridge_goals.py  test_correction.py  test_correction_detect.py  test_divergence.py  test_haziness.py
scripts/polyphony/: __init__.py  __main__.py  config.py  events.py  identity.py  models.py  orchestrator.py  pyproject.toml  router.py  runtime.py  scoring.py  state_machine.py  store.py  workspace.py
scripts/polyphony/adapters/: __init__.py  claude.py  codex.py  kimi.py
scripts/polyphony/sources/: __init__.py  github.py  local.py
scripts/skill_lint/: __init__.py  __main__.py  content.py  frontmatter.py  pyproject.toml  references.py  report.py  spec.py
templates/: .coderabbit.yaml  AGENTS.md  CLAUDE.local.md  CLAUDE.md  Dockerfile.polyphony  PULL_REQUEST_TEMPLATE.md  adr.md  codex-auto-review.sh  config.toml  icpg-pre-edit.sh  icpg-stop-record.sh  mnemos-compact-recovery.sh  mnemos-post-compact-inject.sh  mnemos-post-tool.sh  mnemos-pre-compact.sh  mnemos-pre-edit.sh  mnemos-session-start.sh  mnemos-statusline.sh  mnemos-stop-checkpoint.sh  mnemos-stop-ingest.sh  polyphony-agents.yaml  polyphony-config.yaml  polyphony-identities.yaml  polyphony-routing.yaml  pre-compact.sh  settings.json  tdd-loop-check.sh  tessera-gate-scan.sh  tessera-spend-backstop.sh  tessera-spend-guard.sh  tessera-verify-scan.sh  tessera-watch-surface.sh
(+124 files in other folders)
