[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polyphony"
version = "0.1.0"
description = "Multi-agent orchestration for Maggy"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
polyphony = "polyphony.__main__:main"

# Flat layout: package files live beside this pyproject (not in a polyphony/
# subdir), so map the package name to "." explicitly and list the adapters
# subpackage. Without this, setuptools auto-discovery fails with "Multiple
# top-level modules discovered".
[tool.setuptools]
packages = ["polyphony", "polyphony.adapters"]

[tool.setuptools.package-dir]
polyphony = "."
